--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "mongoose": "^7.1.0",
         "morgan": "^1.10.0",
         "nodemailer": "^6.9.1",
+        "socket.io": "^4.8.1",
         "winston": "^3.8.2"
     },
     "devDependencies": {
@@ -30,4 +31,4 @@
     "engines": {
         "node": ">=14.0.0"
     }
-} 
+}
