添加好友功能

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # 数据库配置
 MONGODB_URI=mongodb://username:password@localhost:27017
 MONGODB_DB_NAME=fishy_brawl
+# 本地调试 mongodb://localhost:27017
 
 # JWT配置
 JWT_SECRET=your_jwt_secret_key_here
