--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node src/app.js",
         "dev": "nodemon src/app.js",
-        "test": "jest"
+        "test": "jest",
+        "import-heroes": "node src/scripts/importHeroes.js"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
@@ -21,7 +22,8 @@
         "morgan": "^1.10.0",
         "nodemailer": "^6.9.1",
         "socket.io": "^4.8.1",
-        "winston": "^3.8.2"
+        "winston": "^3.8.2",
+        "csv-parse": "^5.5.3"
     },
     "devDependencies": {
         "jest": "^29.5.0",
